--- a/kanihi/build.gradle
+++ b/kanihi/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile files('libs/json-smart-1.2.jar')
     compile files('libs/ormlite-android-4.48.jar')
     compile files('libs/ormlite-core-4.48.jar')
+    compile files('libs/android-async-http-1.4.4.jar')
 }
