--- a/kanihi/src/main/AndroidManifest.xml
+++ b/kanihi/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="net.cjlucas.kanihi.MainActivity"
+            android:name="net.cjlucas.kanihi.activities.TrackListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
