--- a/kanihi/src/main/AndroidManifest.xml
+++ b/kanihi/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity android:name="net.cjlucas.kanihi.activities.TrackListActivity" />
+
         <activity
-            android:name="net.cjlucas.kanihi.activities.TrackListActivity"
+            android:name="net.cjlucas.kanihi.activities.ArtistListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
