[adapters] added RowViewAdapter to avoid requiring a ModelListActivity in ModelAdapter

--- a/kanihi/src/main/AndroidManifest.xml
+++ b/kanihi/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity android:name="net.cjlucas.kanihi.activities.TrackListActivity" />
+        <activity android:name="net.cjlucas.kanihi.activities.AlbumListActivity" />
 
         <activity
             android:name="net.cjlucas.kanihi.activities.ArtistListActivity"
