--- a/kanihi/src/main/AndroidManifest.xml
+++ b/kanihi/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name="net.cjlucas.kanihi.activities.TrackListActivity" />
-        <activity android:name="net.cjlucas.kanihi.activities.AlbumListActivity" />
+        <activity android:name=".fragments.TrackListFragment" />
+        <activity android:name=".fragments.AlbumListFragment" />
+        <activity android:name=".fragments.ArtistListFragment" />
 
         <activity
-            android:name="net.cjlucas.kanihi.activities.ArtistListActivity"
+            android:name="net.cjlucas.kanihi.activities.MainNavigationActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
