--- a/kanihi/build.gradle
+++ b/kanihi/build.gradle
@@ -24,10 +24,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/json-smart-1.2.jar')
-    compile files('libs/android-async-http-1.4.4.jar')
     compile files('libs/ormlite-core.jar')
     compile files('libs/ormlite-android-fork.jar')
     compile 'com.android.support:support-v4:+'
+    compile files('libs/android-async-http-1.4.5-20140329.151824-5.jar')
 }
